--- a/css/main.css
+++ b/css/main.css
@@ -42,28 +42,27 @@ body {
 }
 
 /* =====헤더==== */
-.header{
+.header {
   display: block;
   position: fixed;
   top: 0;
   /* width: calc(100% - 110px); */
   width: 100%;
   height: 110px;
-  background-color: rgb(255, 216, 165);
+  background-color: rgba(255, 255, 255, 0.8);
   z-index: 9999;
 }
 
-.header-gnb-bg{
+.header-gnb-bg {
   position: absolute;
   top: 110px;
   width: 100%;
-  height: 200px;
-  background-color: #f5e8e4;
-  display: none;
+  height: 210px;
+  background-color: rgba(255, 255, 255, 0.8);
+  /* display: none; */
 }
 
-
-.header-inner{
+.header-inner {
   width: 100%;
   height: 100%;
   display: flex;
@@ -72,46 +71,44 @@ body {
   position: relative;
 }
 
-.header .logo{
+.header .logo {
   display: flex;
   width: 120px;
   height: 100%;
   line-height: 110px;
 }
 
-.header .logo img{
+.header .logo img {
   width: 120px;
 }
 
-
-.gnb{
+.gnb {
   width: calc(100% - 120px);
   /* height: 120px; */
-  background-color: #98847e;
+  /* background-color: #98847e; */
   display: flex;
   justify-content: center;
   align-items: center;
- 
   padding: 0 100px;
   text-align: center;
 }
 
-.depth1{
+.depth1 {
   width: auto;
   height: 100%;
   position: relative;
   top: 0;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-  line-height: 110px;
   transition: all 0.3s;
 }
 
-.gnb-title{
+.gnb-title {
   width: 100%;
   height: 100%;
-  padding: 0 40px;
+  line-height: 110px;
+  padding: 0 50px;
   display: flex;
   font-weight: 800;
 }
@@ -137,20 +134,23 @@ body {
   display: block;
 } */
 
-.depth2{
+.depth2 {
   position: absolute;
-  top: 110px;
+  top: 140px;
   display: flex;
-  display: none;
+  /* display: none; */
   flex-direction: column;
-  height: 200px;
-  /* justify-content: center; */
-  /* padding: 30px 0; */
+  justify-content: center;
+  height: 210px;
+  /* padding-right: -10px; */
   /* background-color: aquamarine; */
 }
 
-.depth2 li .depth2-text{
-  height: 100%
+.depth2 li .depth2-text {
+  height: 100%;
+  display: flex;
+  padding: 15px 50px;
+  text-align: center;
 }
 
 /* gnb 버튼 */
@@ -174,7 +174,6 @@ body {
 
 /* hover 효과 */
 
-
 .gnb a:hover {
   color: #ff592e;
 }
@@ -182,7 +181,6 @@ body {
 .gnb > li:hover > a {
   color: #ff592e;
 }
-
 
 /* =====배너=====*/
 
@@ -436,7 +434,6 @@ body {
 
 .notice-header {
   margin-bottom: 70px;
-  
 }
 
 .notice-title {
