--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
   width: 100%;
   height: 210px;
   background-color: rgba(255, 255, 255, 0.8);
-  /* display: none; */
+  display: none;
 }
 
 .header-inner {
@@ -153,6 +153,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 210px;
+  display: none;
   /* padding-right: -10px; */
   /* background-color: aquamarine; */
 }
@@ -204,17 +205,15 @@ body {
   left: 0px;
   right: 0px;
 }
+
 .banner {
   /* background: url("../images/banner_img_row.png") no-repeat;
   background-size: cover; */
   display: block;
   width: 100%;
-  height: 1000%;
+  height: 1000px;
   position: relative;
   top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   z-index: 1;
 }
 
@@ -223,8 +222,8 @@ body {
 }
 
 .banner-textBox {
-  /* display: flex;
-  flex-direction: column; */
+  /* /* display: flex; */
+  /* flex-direction: column; */
   position: absolute;
   /* width: 100%; */
   height: auto;
